# pinedit

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  acconfig.h  acinclude.m4  aclocal.m4  bootstrap  clean  config-rzr.h  configure  configure.ac  configure.in  editconfig.h.in  pinedit.pro  pinedit.spec
cmake/Modules/: FindPinball.cmake
data/: CMakeLists.txt  Makefile.am  Makefile.in  bumper.pbl  floor.pbl  floor_target.pbl  floor_wall_target.pbl  left_arm.pbl  loop_cave.pbl  loop_target.pbl  pinball.pbl  right_arm.pbl  shoot.pbl  stopper.pbl  trigger.pbl  tux_small.pbl
data/audio/: CMakeLists.txt  Makefile.am  Makefile.in
data/objects/: CMakeLists.txt  Makefile.am  Makefile.in  arrow.pbl  big_floor.pbl  big_floor_light.pbl  big_tux.pbl  bumper.pbl  lock1.pbl  lock2.pbl  releaselock.pbl  right_arm.pbl  stopper.pbl
data/template/: CMakeLists.txt  Make-template  Make-template.in  Makefile.am  Makefile.in  ModuleScript.cpp  pinball-template.in  pinball.pbl
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  menu.ex  pinedit.cron.d.ex  pinedit.default.ex  pinedit.desktop  pinedit.doc-base  pinedit.doc-base.EX  pinedit.sgml  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex
doc/: CMakeLists.txt  Makefile.am  Makefile.in  fileopen.xpm  index.html  manual.html  tutorial.html  workextrude.xpm  workflip.xpm  workmove.xpm
downstream/freebsd/pinedit/: Makefile
downstream/gentoo/: ChangeLog
libltdl/: Makefile.in  configure
pinedit/: Makefile.am  Makefile.in  armdialog.cpp  armdialog.h  bumperdialog.cpp  bumperdialog.h  command.cpp  command.h  commandaddselect.cpp  commandaddselect.h  commandcopy.cpp  commandcopy.h  commanddeletegroup.cpp  commanddeletegroup.h  commanddeletepolygon.cpp  commanddeletepolygon.h  commanddeleteshape.cpp  commanddeleteshape.h  commanddeletevertex.cpp  commanddeletevertex.h  commandextrude.cpp  commandextrude.h  commandflip.cpp  commandflip.h  commandflipsmart.cpp  commandhideselected.cpp  commandhideselected.h  commandmirror.cpp  commandmirror.h  commandmirrorlocal.cpp  commandmirrorlocal.h  commandmove.cpp  commandmove.h  commandmovegroup.cpp  commandmovegroup.h  commandnewbehavior.cpp  commandnewbehavior.h  commandnewgroup.cpp  commandnewgroup.h  commandnewpolygon.cpp  (+93 more)
pinedit/.deps/: armdialog.P  bumperdialog.P  command.P  commandaddselect.P  commanddeletegroup.P  commanddeletepolygon.P  commanddeleteshape.P  commanddeletevertex.P  commandextrude.P  commandflip.P  commandmove.P  commandmovegroup.P  commandnewbehavior.P  commandnewgroup.P  commandnewpolygon.P  commandnewshape.P  commandnewvertex.P  commandresize.P  commandresizelocal.P  commandrotate.P  commandrotategroup.P  commandrotatelocal.P  commandselect.P  commandsnap.P  commandtexcoord.P  commandunselect.P  fileutil.P  glengine.P  glengine.moc.P  lightdialog.P  main.P  moc_armdialog.P  moc_bumperdialog.P  moc_glengine.P  moc_lightdialog.P  moc_moduledialog.P  moc_pinedit.P  moc_pineditdoc.P  moc_pineditview.P  moc_polygonview.P  (+21 more)
snap/: snapcraft.yaml
src/: CMakeLists.txt  Makefile.am  Makefile.in  armdialog.cpp  armdialog.h  bumperdialog.cpp  bumperdialog.h  command.h  commandaddselect.cpp  commandaddselect.h  commandcopy.cpp  commandcopy.h  commanddeletegroup.cpp  commanddeletegroup.h  commanddeletepolygon.cpp  commanddeletepolygon.h  commanddeleteshape.h  commanddeletevertex.cpp  commanddeletevertex.h  commandextrude.cpp  commandextrude.h  commandflip.h  commandflipsmart.h  commandhideselected.cpp  commandhideselected.h  commandmirror.h  commandmirrorlocal.cpp  commandmirrorlocal.h  commandmove.cpp  commandmove.h  commandmovegroup.cpp  commandmovegroup.h  commandnewbehavior.cpp  commandnewbehavior.h  commandnewgroup.cpp  commandnewgroup.h  commandnewpolygon.cpp  commandnewpolygon.h  commandnewshape.h  commandnewvertex.cpp  (+76 more)
