AUTOMAKE_OPTIONS = gnu

pkgdata_DATA = \
left_arm.pbl \
right_arm.pbl \
bumper.pbl \
lock1.pbl \
lock2.pbl \
releaselock.pbl \
floor.pbl \
stopper.pbl \
bumphard.wav \
bumpsoft.wav \
bump.wav \
flip.wav \
gameover.wav \
lock.wav \
loop.wav \
nudge.wav \
opentux.wav \
shoot.wav \
up.wav

EXTRA_DIST = $(pkgdata_DATA)
