
set (PINEDIT_DOC_FILES manual.html 
tutorial.html 
fileopen.xpm 
workdeletepolygon.xpm 
workextrude.xpm 
workflip.xpm 
workloadgroup.xpm 
workmovegroup.xpm 
workmove.xpm 
worknewgroup.xpm 
worknewpolygon.xpm 
worknewshape.xpm 
workselect.xpm 
ss10.jpg 
ss11.jpg 
ss12.jpg 
ss13.jpg 
ss1.jpg 
ss2.jpg 
ss3.jpg 
ss4.jpg 
ss5.jpg 
ss6.jpg 
ss7.jpg 
ss8.jpg 
ss9.jpg)

install(FILES ${PINEDIT_DOC_FILES} DESTINATION share/games/${PINEDIT_EXEC_NAME}/doc)
